--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lextes/GPI#readme",
   "dependencies": {
+    "angular": "~1.4.1",
     "bootstrap": "^3.3.7"
   }
 }
